# 24-880-workshop

./: .gitignore  GEMINI.md  LICENSE  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: workshop.md
hooks/: session-start
skills/example/: SKILL.md
src/agents_example/mcp/: __init__.py  __main__.py
