[project]
name = "agents-example"
version = "0.0.1"
authors = [
  { name = "Amogh Balaji" },
]
description = "Example extension for 24-880 workshop"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.3",
]

[project.urls]
Homepage = "https://github.com/amoghbalaji02/24-880-workshop"
Issues = "https://github.com/amoghbalaji02/24-880-workshop/issues"

[tool.setuptools.packages.find]
where = ["src"]
